--- a/Index.html
+++ b/Index.html
@@ -92,7 +92,7 @@ Darjeeling's culture is highly cosmopolitan—a result of diverse ethnic groups 
 <table border="0" width="85%" align="center" cellpadding="15">
 <tr align="center">
 <td>
-<img src="https://th.bing.com/th/id/R.2cb691cd5c05328f15f39263f70220ce?rik=tYOivvY9QtfqmQ&riu=http%3a%2f%2fwww.clipartbest.com%2fcliparts%2fKin%2fo9G%2fKino9GzXT.png&ehk=TbPf3OPKEa7gPbL3wQug73WwY9MP1TxupKCJVcVSEE4%3d&risl=&pid=ImgRaw&r=0" width="100px"> <br>
+<img src="https://th.bing.com/th/id/R.2cb691cd5c05328f15f39263f70220ce?rik=Z7%2f8evAQURfttw&riu=http%3a%2f%2fclipart-library.com%2fimg%2f1344166.png&ehk=Eup27LJAdO89zKYNjO5mrk80mR6Wc%2bMwWeLa%2bD8eA%2f4%3d&risl=&pid=ImgRaw&r=0" width="100px"> <br>
 <font size="6" >Phone No.</font> <br>
 <font size="5">03542255022.</font>
 </td>
